force-app/main/default/objects/Claude_API_Credentials__c/Claude_API_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Protected custom settings for storing Claude AI API credentials and configuration. Use hierarchy type to allow org-wide, profile, or user-level overrides.</description>
    <label>Claude API Credentials</label>
</CustomObject>