force-app/main/default/objects/Claude_API_Credentials__c/fields/API_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_Endpoint__c</fullName>
    <defaultValue>&quot;https://api.anthropic.com/v1/messages&quot;</defaultValue>
    <description>Base URL for Claude AI API endpoint. Default: https://api.anthropic.com/v1/messages</description>
    <label>API Endpoint</label>
    <type>Url</type>
</CustomField>