force-app/main/default/objects/Claude_API_Credentials__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Anthropic API key for Claude AI authentication. This field is encrypted and protected.</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>