force-app/main/default/objects/Claude_API_Credentials__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to make Claude AI the default LLM provider for the Prompt Factory. Only one LLM provider should be set as default at a time.</description>
    <inlineHelpText>Check this box to use Claude AI as the default AI provider. Uncheck to use Azure OpenAI instead. Only one provider should be set as default at a time.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>