force-app/main/default/objects/Claude_API_Credentials__c/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <defaultValue>16384</defaultValue>
    <description>Maximum number of tokens for AI response generation. Default: 16384</description>
    <label>Max Tokens</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>