force-app/main/default/objects/Claude_API_Credentials__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <defaultValue>&quot;claude-3-5-sonnet-20241022&quot;</defaultValue>
    <description>Claude AI model identifier. Default: claude-3-5-sonnet-20241022</description>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>