force-app/main/default/objects/Claude_API_Credentials__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <defaultValue>0.7</defaultValue>
    <description>Temperature parameter for AI response creativity (0.0-1.0). Default: 0.7</description>
    <label>Temperature</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>